logs/Slang/generated/hdlconv/hdlconvertor_p779.sv.log
name: hdlconvertor_p779
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p779.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p779.sv:7:9: error: import of 'x' collides with an existing declaration
initial x = 1;
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p779.sv:11:5: note: declared here
int x;
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p779.sv:5:11: note: imported from here
import p::*;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p779.sv:2:5: note: declared here
int x;
    ^
